parserProjectJava/src/main/java/parser/Python3.g4
grammar Python3;
start: program;
program: statement+;
statement: Arithmetic_operator | Assignment_operators;
Arithmetic_operator: '+' | '-' | '*' | '/' | '%';
Assignment_operators: '=' | '+=' | '-=' | '*=' | '/=';
